replace lines1 to 183 in viewProductInfo with the same lines from viewClient

--- a/views/pages/viewProductInfo.ejs
+++ b/views/pages/viewProductInfo.ejs
@@ -11,10 +11,10 @@
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
 
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/sidebars.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/home.css">
-    <link rel="stylesheet" href="css/form.css">
+    <link href="https://guarded-springs-56328.herokuapp.com/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://guarded-springs-56328.herokuapp.com/css/sidebars.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://guarded-springs-56328.herokuapp.com/css/home.css">
+    <link rel="stylesheet" href="https://guarded-springs-56328.herokuapp.com/css/form.css">
 
     <script src="js/main.js"></script>
 
@@ -111,8 +111,8 @@
                 <div class="position-fixed">
                     <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark " style="width: 280px;">
                         <a class="navbar-brand" href="#">
-                            <img src="images/logo.png" alt="" width="70" height="70"
-                                class="d-inline-block align-text-top">
+                            <img src="https://guarded-springs-56328.herokuapp.com/images/logo.png" alt="" width="70"
+                                height="70" class="d-inline-block align-text-top">
                             Bytetools
                         </a>
 
@@ -179,11 +179,9 @@
                             <!-- <input type="submit" value="LOGOUT"> -->
                         </form>
                     </div>
-
                 </div>
             </div>
-
-
+            
 
 
             <!-- Modfied by Nabila: renamed "Client" with "Product" -->
@@ -207,13 +205,13 @@
                                     <input type="text" class="form-control" id="inputProductID" name="prdctID"
                                     value="<%= r.productid %>" readonly="readonly">
                                     <!-- <br>
-                                    <label for="inputModelSeries" class="form-label">Model Series</label>
-                                    <input type="text" class="form-control" id="inputModelSeries" name="prdctModel"
-                                    value="<%=r.modelSeries%>" readonly="readonly"> -->
+                                    <label for="inputmodelseries" class="form-label">Model Series</label>
+                                    <input type="text" class="form-control" id="inputmodelseries" name="prdctModel"
+                                    value="<%=r.modelseries%>" readonly="readonly"> -->
                                     <br>
                                     <label for="inputProductName" class="form-label">Product Name</label>
                                     <input type="text" class="form-control" id="inputProductName" name="prdctName"
-                                    value="<%= r.productName %>" readonly="readonly">
+                                    value="<%= r.productname %>" readonly="readonly">
                                     <br>
                                     <label for="inputPrice" class="form-label">Price</label>
                                     <input type="number" class="form-control" id="inputPrice" name="prdctPrice" 
@@ -222,9 +220,9 @@
 
                                 <div class="col-md-6">
                                     <h2></h2>
-                                    <label for="inputModelSeries" class="form-label">Model Series</label>
-                                    <input type="text" class="form-control" id="inputModelSeries" name="prdctModel"
-                                    value="<%= r.modelSeries %>" readonly="readonly">
+                                    <label for="inputmodelseries" class="form-label">Model Series</label>
+                                    <input type="text" class="form-control" id="inputmodelseries" name="prdctModel"
+                                    value="<%= r.modelseries %>" readonly="readonly">
                                     <br>
                                     <label id= "inputCategory" class="form-label">Category</label>
                                     <input type="text" class="form-control" id="inputCategory" name="prdctCategory"
