--- a/views/pages/viewProductInfo.ejs
+++ b/views/pages/viewProductInfo.ejs
@@ -219,7 +219,7 @@
                                 </div>
 
                                 <div class="col-md-6">
-                                    <h2 hidden="hidden">Product Information cont...</h2>
+                                    <!-- <h2 hidden="hidden">Product Information cont...</h2> -->
                                     <label for="inputmodelseries" class="form-label">Model Series</label>
                                     <input type="text" class="form-control" id="inputmodelseries" name="prdctModel"
                                     value="<%= r.modelseries %>" readonly="readonly">
