Rearranged modelseries in newProduct.ejs above category

--- a/views/pages/newProduct.ejs
+++ b/views/pages/newProduct.ejs
@@ -198,9 +198,9 @@
                                 <h2>Product Information</h2>
                                     <label for="inputProductID" class="form-label">Product ID</label>
                                     <input type="text" class="form-control" id="inputProductID" name="prdctID">
-                                    <br>
+                                    <!-- <br>
                                     <label for="inputModelSeries" class="form-label">Model Series</label>
-                                    <input type="text" class="form-control" id="inputModelSeries" name="prdctModel">
+                                    <input type="text" class="form-control" id="inputModelSeries" name="prdctModel"> -->
                                     <br>
                                     <label for="inputProductName" class="form-label">Product Name</label>
                                     <input type="text" class="form-control" id="inputProductName" name="prdctName">
@@ -211,8 +211,11 @@
                             </div>
 
                             <div class="col-md-6">
+                                <label for="inputModelSeries" class="form-label">Model Series</label>
+                                <input type="text" class="form-control" id="inputModelSeries" name="prdctModel">
+                                <br>
                                 <label id= "inputCategory" class="form-label">Category</label>
-                                    <input type="text" class="form-control" id="inputCategory" name="prdctCategory">
+                                <input type="text" class="form-control" id="inputCategory" name="prdctCategory">
                             </div>
 
                             <div class="row g-3 gx-5">
