--- a/views/pages/viewProductInfo.ejs
+++ b/views/pages/viewProductInfo.ejs
@@ -243,6 +243,11 @@
                                     <!-- <form method="POST" action="/newProduct/Added"> -->
                                         <a class="btn btn-secondary" href="/editProductInfo/<%= r.productid %>">Edit Product</a>
                                         <a class="btn btn-secondary" href="/productspage">return to product page</a>
+
+                                        <form action="/deleteProductInfo/:productid" method="POST">
+                                            <input value="Delete Product" type="submit" class="btn-secondary">
+                                        </form>
+
                                     <!-- </form> -->
                                 </div>
                                 <!-- </form> -->
