small edit to css classes in view/edit

--- a/views/pages/editProductInfo.ejs
+++ b/views/pages/editProductInfo.ejs
@@ -243,7 +243,7 @@
                                     <!-- <form method="POST" action="/newProduct/Added"> -->
                                 
                                         <form action="/deleteProductInfo/:productid" method="POST">
-                                            <input value="Delete Product" type="submit" class="btn-secondary">
+                                            <input value="Delete Product" type="submit" class="btn btn-secondary">
                                         </form>
 
                                         <a class="btn btn-secondary" href="/productspage">return to product page</a>
