--- a/views/pages/viewProductInfo.ejs
+++ b/views/pages/viewProductInfo.ejs
@@ -245,7 +245,7 @@
                                         <a class="btn btn-secondary" href="/productspage">return to product page</a>
 
                                         <form action="/deleteProductInfo/:productid" method="POST">
-                                            <input value="Delete Product" type="submit" class="btn-secondary">
+                                            <input value="Delete Product" type="submit" class="btn btn-secondary">
                                         </form>
 
                                     <!-- </form> -->
