--- a/views/pages/editProductInfo.ejs
+++ b/views/pages/editProductInfo.ejs
@@ -242,7 +242,7 @@
                                 <div class="col-12" style="text-align: center;">
                                     <!-- <form method="POST" action="/newProduct/Added"> -->
                                 
-                                        <form action="/deleteProductInfo/:productid" method="POST">
+                                        <form action="/deleteProductInfo/<%=r.productid%>" method="POST">
                                             <input value="Delete Product" type="submit" class="btn btn-secondary">
                                         </form>
 
