small paymentspage fix

--- a/views/pages/paymentspage.ejs
+++ b/views/pages/paymentspage.ejs
@@ -191,7 +191,7 @@
                 <div class="input-group">
                     <!-- Button for new Clients -->
                     <!-- <form action="/newClient.html"> -->
-                    <form method="GET" action="/addInvoice">
+                    <form method="GET" action="/newPayment">
                         <input id="new-button" class="btn btn-secondary" type="submit" value="New" />
                     </form>
 
