added more input fields to newPayment page

--- a/views/pages/newPayment.ejs
+++ b/views/pages/newPayment.ejs
@@ -197,18 +197,45 @@
                             <div class="row g-3 gx-5">
                                 <div class="col-md-12">
                                     <h2>Payment Information</h2>
+                                        <label class="form-label">Payment ID</label>
+                                        <input type="text" class="form-control" id="inputClientName" name="paymentID">
+                                        <br>
+
+                                        <label class="form-label">Payment Status</label>
+                                        <input type="text" class="form-control" id="inputClientName" name="paymentStatus">
+                                        <br>
+
+                                        <label class="form-label">Payment Date</label>
+                                        <input type="text" class="form-control" id="inputClientName" name="paymentDate">
+                                        <br>
+
                                         <label for="inputClientName" class="form-label">Client Name</label>
-                                        <!-- <input type="text" class="form-control" id="inputClientName" name="prdctID"> -->
+                                        <input type="text" class="form-control" id="inputClientName" name="clientName"> 
+                                        <br>
+
+                                        <!-- 
                                         <select class="form-control" id="inputClientName" name="prdctID">
                                             <option></option>
                                         </select>
-                                        <br>
+                                        -->
+
+                                        
                                         <label for="inputInvoiceNumber" class="form-label">Invoice ID</label>
-                                        <input type="text" class="form-control" id="inputPaymentName" name="prdctName">
+                                        <input type="text" class="form-control" id="inputPaymentName" name="invoiceID">
                                         <br>
+
                                         <label for="inputPrice" class="form-label">Price</label>
                                         <input type="number" class="form-control" id="inputPrice" name="prdctPrice" 
                                         min=0 value=0 step=0.01 placeholder=0.00>
+                                        <br>
+
+                                        <label for="inputInvoiceNumber" class="form-label">Amount</label>
+                                        <input type="text" class="form-control" id="inputPaymentName" name="amnt">
+                                        <br>
+
+                                        <label for="inputInvoiceNumber" class="form-label">Method</label>
+                                        <input type="text" class="form-control" id="inputPaymentName" name="paymentMethod">
+                                        <br>
                                 </div>
                             </div>
 
