added return buttons to edit/view client

--- a/views/pages/editClient.ejs
+++ b/views/pages/editClient.ejs
@@ -284,6 +284,8 @@
                                     <!-- <form method="POST" action="/newClient/Added"> -->
                                     <!-- <a href="/editClient/<%= r.clientid%>" class="btn btn-secondary">Edit Client</a> -->
                                     <!-- <form method="POST" action ='/updateclient/<%= r.clientid%>'> -->
+                                    <a href="/clients" class="btn btn-secondary">Return</a>
+
                                     <input type="submit" value="Update Info" class="btn btn-secondary"></input>
                                     <!-- </form> -->
 
