--- a/views/pages/viewClient.ejs
+++ b/views/pages/viewClient.ejs
@@ -254,6 +254,9 @@
                                 <!-- <form method="POST" action="/newClient/Added"> -->
                                 <div class="col-12" style="text-align: center;">
                                     <!-- <form method="POST" action="/newClient/Added"> -->
+                                    
+                                    <a href="/clients" class="btn btn-secondary">Return</a>
+
                                     <a href="/editClient/<%=r.clientid%>" class="btn btn-secondary">Edit Client</a>
 
                                     <form method="POST" action='/deleteclient/<%=r.clientid%>'>
