--- a/views/pages/viewProductInfo.ejs
+++ b/views/pages/viewProductInfo.ejs
@@ -242,7 +242,7 @@
                                 <div class="col-12" style="text-align: center;">
                                     <!-- <form method="POST" action="/newProduct/Added"> -->
                                         <a class="btn btn-secondary" href="/editProductInfo/<%= r.productid %>">Edit Product</a>
-                                        <a class="btn btn-secondary" href="/productspage">return to product page</a>
+                                        <a class="btn btn-secondary" href="/productspage">Return</a>
 
                                         <form action="/deleteProductInfo/<%=r.productid%>" method="POST">
                                             <input value="Delete Product" type="submit" class="btn btn-secondary">
